alteraçoes cadastro video

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -48,6 +48,7 @@
       right: 0;
       bottom: 0;
       background: var(--white);
+      color: var(--black);
       border-radius: 0;
       border: 0;
       text-align: center;
